@@ -20,13 +20,13 @@ import org.openrewrite.InMemoryExecutionContext;
 import org.openrewrite.test.RewriteTest;
 
 import java.nio.file.Files;
-import java.nio.file.Paths;
+import java.nio.file.Path;
 
 class Java21ParserTest implements RewriteTest {
 
     @Test
     void shouldLoadResourceFromClasspath() throws Exception {
-        Files.deleteIfExists(Paths.get(System.getProperty("user.home"), ".rewrite", "classpath", "jackson-annotations-2.17.1.jar"));
+        Files.deleteIfExists(Path.of(System.getProperty("user.home"), ".rewrite", "classpath", "jackson-annotations-2.17.1.jar"));
         rewriteRun(spec -> spec.parser(JavaParser.fromJavaVersion().classpathFromResources(new InMemoryExecutionContext(), "jackson-annotations")));
     }
 }
